Fix 'jump' for nested items in list

--- a/packages/block-library/src/list/editor.scss
+++ b/packages/block-library/src/list/editor.scss
@@ -3,4 +3,8 @@
 .block-library-list .editor-rich-text__tinymce ol {
 	padding-left: 1.3em;
 	margin-left: 1.3em;
+	li {
+		margin-bottom: 0;
+		line-height: 2;
+	}
 }
